--- a/aliment/index.html
+++ b/aliment/index.html
@@ -86,7 +86,7 @@
 <!-- Contingut principal -->
 <div class="content-container">
     <h1>Albarginia conventional o ecològica?</h1>
-    <p>He buscat informació primaria académica a <a href="https://schoar.google.com">Google acadèmic</a></p>
+    <p>He buscat informació primaria académica a <a href="https://scholar.google.com">Google acadèmic</a></p>
     <p>He trobat un article cientific que compara la composició química de la alberginia coventional i la alberginia ecològica i os posaré un enllaç de l'article i una imatge de l'article que demostri quina alberginia és:</p>
     <ul>
         <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a la meva veu a través d'un micròfon i a diferents tecles del teclat, al ratolí, que faci moviments repetitius amb sin i cos, moviments aleatoris amb random... Utilitzarem p5.js.</li>
