--- a/aliment/index.html
+++ b/aliment/index.html
@@ -87,7 +87,7 @@
 <div class="content-container">
     <h1>Albarginia conventional o ecològica?</h1>
     <p>He buscat informació primaria académica a <a href="https://scholar.google.com">Google acadèmic</a></p>
-    <p>He trobat un article cientific que compara la composició química de la alberginia coventional i la alberginia ecològica i os posaré un enllaç de l'article i una imatge de l'article que demostri quina alberginia és:</p>
+    <p>He trobat un article cientific que compara la composició química de la alberginia coventional i la alberginia ecològica i os posaré un enllaç de l'article de <a href="https://pubs.acs.org/doi/abs/10.1021/jf904438n">Raigon et al., 2010</a> i una imatge de l'article que demostri quina alberginia és:</p>
     <ul>
         <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a la meva veu a través d'un micròfon i a diferents tecles del teclat, al ratolí, que faci moviments repetitius amb sin i cos, moviments aleatoris amb random... Utilitzarem p5.js.</li>
         <li>Aliments ecològics i convencionals amb C++.</li>
