--- a/aliment/index.html
+++ b/aliment/index.html
@@ -94,6 +94,8 @@
     <p>A la taula 2 podem veure els resultats de les alberginies de l'any 2007 i a la taula 3 del 2008, podem veure
     que alguns minerals són una miqueta superiors en el ecològic, com el calci el potasi i el magnesi al 2007 i 
     magnesi potasi i coure al 2008</p>
+    <p>A la taula 4 podem veure que no hi ha diferències en polifenols totals (p>0,05)
+    ,però si hi ha diferències a l'activitat antioxidant major en ecològic (p<0.05)</p>
 </div>
 
 <!-- Scripts necessaris -->
