--- a/aliment/index.html
+++ b/aliment/index.html
@@ -88,9 +88,9 @@
     <h1>Albarginia conventional o ecològica?</h1>
     <p>He buscat informació primaria académica a <a href="https://scholar.google.com">Google acadèmic</a></p>
     <p>He trobat un article cientific que compara la composició química de la alberginia coventional i la alberginia ecològica i os posaré un enllaç de l'article de <a href="https://pubs.acs.org/doi/abs/10.1021/jf904438n">Raigon et al., 2010</a> i una imatge de l'article que demostri quina alberginia és:</p>
-    <img src="resultat1.png">
-    <img src="resultat1B.png">
-    <img src="resultat2.png">
+    <img src="resultats1.png">
+    <img src="resultats1B.png">
+    <img src="resultats2.png">
     <p>A la taula 2 podem veure els resultats de les alberginies de l'any 2007 i a la taula 3 del 2008, podem veure
     que alguns minerals són una miqueta superiors en el ecològic, com el calci el potasi i el magnesi al 2007 i 
     magnesi potasi i coure al 2008</p>
