--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         aria-expanded="false">Projectes</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                          <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
-                        <a class="dropdown-item" href="#">Projecte 2</a>
+                        <a class="dropdown-item" href="#">Coldplay</a>
                         <a class="dropdown-item" href="#">Projecte 3</a>
                     </div>
                 </li>
