--- a/coldplay/index.html
+++ b/coldplay/index.html
@@ -98,7 +98,13 @@
    A més de la lluna creixent altres figures podrien ser lluna decreixent i la lluna completa. Si la cançó és a Sky full of
    stars s'animaran estrelles i es faran més gran depenent del volum i el color dependre de si el volum és més greu o aagut.
    Si és la cançó We pray posarem el símbol de les mans pregant i es mouran apropant-se i separant-se amb el volum i canviant
-   de color per exemple de blanc a nege depenent del so, agut o greu.</p>
+   de color per exemple de blanc a nege depenent del so, agut o greu. Els símbols d'infinit i d'un arc de Sant Martí també
+   s'utilitzen.</p>
+   <h2>Com ho farem?</h2>
+    <p>Utilitzarem HTML que és un llegutge de marques <marca></marca>, CSS que és un lleguatge d'estils que ens permet jugar
+    amb el tipos de lletra, marges, colors i el lleguatge més important JAVASCRIP i dintre de ell utilitzarem 
+    <a href="https://editor.p5js.org"> p5.js</a>. Primer dibuixarem a mà amb paper milimetrat o una pàgina web creada pel 
+    professor un dibuix que serà relacionat amb Coldplay i que anirem a música de Coldplay. </p>
   <ul>
         <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a la meva veu a través d'un micròfon i a diferents tecles del teclat, al ratolí, que faci moviments repetitius amb sin i cos, moviments aleatoris amb random... Utilitzarem p5.js.</li>
         <li>Aliments ecològics i convencionals amb C++.</li>
