--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                          <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/coldplay">Coldplay</a>
-                        <a class="dropdown-item" href="#">Projecte 3</a>
+                        <a class="dropdown-item" href="#">https://annaadpp.github.io/Moonmusic</a>
                     </div>
                 </li>
                 <li class="nav-item">
