--- a/aliment/index.html
+++ b/aliment/index.html
@@ -71,8 +71,8 @@
                         aria-expanded="false">Projectes</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
-                        <a class="dropdown-item" href="#">Projecte 2</a>
-                        <a class="dropdown-item" href="#">Projecte 3</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/coldplay">Coldplay</a>
+                        <a class="dropdown-item" href="#">https://annaadpp.github.io/Moon music</a>
                     </div>
                 </li>
                 <li class="nav-item">
