--- a/coldplay/index.html
+++ b/coldplay/index.html
@@ -70,9 +70,9 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Projectes</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                         <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/coldplay">Coldplay</a>
-                        <a class="dropdown-item" href="#">Projecte 3</a>
+                        <a class="dropdown-item" href="#">https://annaadpp.github.io/Moon music</a>
                     </div>
                 </li>
                 <li class="nav-item">
