--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -114,7 +114,7 @@ function draw() {
   });
 }
 
-function drawHeart() {
+function drawLogoColdplay() {
   beginShape();
 vertex(219, 8.1875);
 vertex(226, 8.1875);
