--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -102,8 +102,8 @@ function draw() {
     translate(shape.x, shape.y);
     scale(size);
 
-    if (selectedShape === 'heart') {
-      drawHeart(); // Dibuixa el cor
+    if (selectedShape === 'Coldplay') {
+      drawLogoColdplay(); // Dibuixa el cor
     } else if (selectedShape === 'moon') {
       drawCrescentMoon(); // Dibuixa la lluna creixent
     } else if (selectedShape === 'rainbow') {
