--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1157,7 +1157,7 @@ vertex(101, 379.1875);
 vertex(98, 366.1875);
 vertex(99, 348.1875);
 vertex(103, 332.1875);
-endShape();
+endShape(CLOSE);
 }
 
 function drawCrescentMoon() {
