--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -115,7 +115,8 @@ function draw() {
 }
 
 function drawHeart() {
- beginShape();
+scale(0.5);
+    beginShape();
 vertex(219, 8.1875);
 vertex(226, 8.1875);
 vertex(232, 6.1875);
