--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1162,11 +1162,67 @@ endShape(CLOSE);
 }
 
 function drawCrescentMoon() {
-  // Dibuix de la lluna creixent
-  fill(0);
-  ellipse(0, 0, 50, 100); // Lluna plena
-  fill('#0d335f');
-  ellipse(10, 0, 50, 100); // Ombra per crear la creixent
+  // drawing of the contour of the head
+  beginShape();
+curveVertex(103, 154.1875);
+curveVertex(112, 160.1875);
+curveVertex(123, 164.1875);
+curveVertex(137, 161.1875);
+curveVertex(147, 158.1875);
+curveVertex(155, 149.1875);
+curveVertex(162, 138.1875);
+curveVertex(168, 123.1875);
+curveVertex(173, 110.1875);
+curveVertex(178, 101.1875);
+curveVertex(179, 91.1875);
+curveVertex(174, 79.1875);
+curveVertex(168, 67.1875);
+curveVertex(179, 62.1875);
+curveVertex(189, 59.1875);
+curveVertex(198, 57.1875);
+curveVertex(207, 59.1875);
+curveVertex(213, 51.1875);
+curveVertex(206, 44.1875);
+curveVertex(198, 45.1875);
+curveVertex(193, 49.1875);
+curveVertex(185, 50.1875);
+curveVertex(175, 52.1875);
+curveVertex(167, 51.1875);
+curveVertex(160, 44.1875);
+curveVertex(155, 35.1875);
+curveVertex(148, 27.1875);
+curveVertex(138, 22.1875);
+curveVertex(127, 20.1875);
+curveVertex(116, 19.1875);
+curveVertex(104, 22.1875);
+curveVertex(94, 28.1875);
+curveVertex(87, 35.1875);
+curveVertex(82, 43.1875);
+curveVertex(80, 51.1875);
+curveVertex(78, 58.1875);
+curveVertex(68, 61.1875);
+curveVertex(62, 61.1875);
+curveVertex(52, 61.1875);
+curveVertex(45, 57.1875);
+curveVertex(39, 56.1875);
+curveVertex(32, 62.1875);
+curveVertex(34, 72.1875);
+curveVertex(45, 74.1875);
+curveVertex(49, 69.1875);
+curveVertex(55, 71.1875);
+curveVertex(61, 72.1875);
+curveVertex(69, 74.1875);
+curveVertex(66, 82.1875);
+curveVertex(64, 88.1875);
+curveVertex(64, 97.1875);
+curveVertex(66, 106.1875);
+curveVertex(70, 115.1875);
+curveVertex(76, 122.1875);
+curveVertex(79, 126.1875);
+curveVertex(83, 132.1875);
+curveVertex(90, 139.1875);
+curveVertex(96, 145.1875);
+endShape(CLOSE);
 }
 
 function drawRainbow() {
