--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1223,6 +1223,22 @@ curveVertex(83, 132.1875);
 curveVertex(90, 139.1875);
 curveVertex(96, 145.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(127, 74.1875);
+curveVertex(135, 72.1875);
+curveVertex(144, 74.1875);
+curveVertex(150, 80.1875);
+curveVertex(154, 87.1875);
+curveVertex(154, 92.1875);
+curveVertex(153, 102.1875);
+curveVertex(147, 112.1875);
+curveVertex(137, 118.1875);
+curveVertex(124, 115.1875);
+curveVertex(116, 109.1875);
+curveVertex(112, 98.1875);
+curveVertex(113, 86.1875);
+curveVertex(118, 78.1875);
+endShape(CLOSE);
 }
 
 function drawRainbow() {
