--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1239,6 +1239,17 @@ curveVertex(112, 98.1875);
 curveVertex(113, 86.1875);
 curveVertex(118, 78.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(130, 89.1875);
+curveVertex(136, 88.1875);
+curveVertex(142, 89.1875);
+curveVertex(144, 93.1875);
+curveVertex(144, 98.1875);
+curveVertex(141, 103.1875);
+curveVertex(135, 105.1875);
+curveVertex(129, 100.1875);
+curveVertex(128, 94.1875);
+endShape(CLOSE);
 }
 
 function drawRainbow() {
