--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1250,6 +1250,36 @@ curveVertex(135, 105.1875);
 curveVertex(129, 100.1875);
 curveVertex(128, 94.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(164, 102.1875);
+curveVertex(162, 110.1875);
+curveVertex(159, 118.1875);
+curveVertex(156, 125.1875);
+curveVertex(153, 134.1875);
+curveVertex(149, 144.1875);
+curveVertex(140, 149.1875);
+curveVertex(131, 149.1875);
+curveVertex(122, 147.1875);
+curveVertex(116, 142.1875);
+curveVertex(109, 134.1875);
+curveVertex(104, 126.1875);
+curveVertex(100, 118.1875);
+curveVertex(96, 110.1875);
+curveVertex(96, 105.1875);
+curveVertex(100, 110.1875);
+curveVertex(102, 114.1875);
+curveVertex(107, 118.1875);
+curveVertex(112, 122.1875);
+curveVertex(117, 126.1875);
+curveVertex(120, 129.1875);
+curveVertex(126, 131.1875);
+curveVertex(134, 132.1875);
+curveVertex(140, 131.1875);
+curveVertex(147, 128.1875);
+curveVertex(152, 125.1875);
+curveVertex(155, 121.1875);
+curveVertex(160, 114.1875);
+endShape(CLOSE);
 }
 
 function drawRainbow() {
