--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1343,6 +1343,123 @@ bezierVertex(314, 277.1875, 346, 272.1875, 390, 272.1875);
 bezierVertex(415, 274.1875, 449, 278.1875, 483, 285.1875);
 bezierVertex(504, 290.1875, 536, 300.1875, 568, 314.1875);
 endShape();
+    beginShape();
+curveVertex(91, 293.1875);
+curveVertex(94, 293.1875);
+curveVertex(97, 294.1875);
+curveVertex(100, 296.1875);
+curveVertex(101, 298.1875);
+curveVertex(102, 301.1875);
+curveVertex(100, 304.1875);
+curveVertex(97, 306.1875);
+curveVertex(93, 306.1875);
+curveVertex(90, 306.1875);
+curveVertex(92, 309.1875);
+curveVertex(95, 311.1875);
+curveVertex(98, 312.1875);
+curveVertex(102, 313.1875);
+curveVertex(107, 313.1875);
+curveVertex(114, 311.1875);
+curveVertex(121, 306.1875);
+curveVertex(123, 298.1875);
+curveVertex(124, 288.1875);
+curveVertex(124, 276.1875);
+curveVertex(124, 264.1875);
+curveVertex(124, 251.1875);
+curveVertex(124, 234.1875);
+curveVertex(124, 217.1875);
+curveVertex(124, 202.1875);
+curveVertex(125, 182.1875);
+curveVertex(125, 162.1875);
+curveVertex(132, 145.1875);
+curveVertex(140, 134.1875);
+curveVertex(146, 129.1875);
+curveVertex(151, 131.1875);
+curveVertex(154, 137.1875);
+curveVertex(156, 144.1875);
+curveVertex(155, 154.1875);
+curveVertex(154, 164.1875);
+curveVertex(149, 172.1875);
+curveVertex(146, 178.1875);
+curveVertex(141, 185.1875);
+curveVertex(137, 189.1875);
+curveVertex(131, 195.1875);
+curveVertex(128, 198.1875);
+curveVertex(121, 203.1875);
+curveVertex(114, 210.1875);
+curveVertex(106, 216.1875);
+curveVertex(98, 223.1875);
+curveVertex(92, 231.1875);
+curveVertex(90, 243.1875);
+curveVertex(93, 254.1875);
+curveVertex(99, 265.1875);
+curveVertex(105, 268.1875);
+curveVertex(114, 272.1875);
+curveVertex(121, 271.1875);
+curveVertex(135, 265.1875);
+curveVertex(141, 254.1875);
+curveVertex(140, 243.1875);
+curveVertex(135, 235.1875);
+curveVertex(125, 230.1875);
+curveVertex(116, 232.1875);
+curveVertex(111, 236.1875);
+curveVertex(108, 244.1875);
+curveVertex(109, 252.1875);
+curveVertex(113, 260.1875);
+curveVertex(109, 260.1875);
+curveVertex(104, 257.1875);
+curveVertex(99, 249.1875);
+curveVertex(99, 241.1875);
+curveVertex(103, 231.1875);
+curveVertex(111, 222.1875);
+curveVertex(117, 220.1875);
+curveVertex(130, 219.1875);
+curveVertex(138, 222.1875);
+curveVertex(148, 230.1875);
+curveVertex(153, 242.1875);
+curveVertex(154, 253.1875);
+curveVertex(148, 264.1875);
+curveVertex(143, 270.1875);
+curveVertex(136, 274.1875);
+curveVertex(127, 276.1875);
+curveVertex(115, 276.1875);
+curveVertex(102, 272.1875);
+curveVertex(92, 266.1875);
+curveVertex(84, 253.1875);
+curveVertex(81, 240.1875);
+curveVertex(86, 220.1875);
+curveVertex(100, 204.1875);
+curveVertex(115, 194.1875);
+curveVertex(133, 182.1875);
+curveVertex(141, 174.1875);
+curveVertex(149, 161.1875);
+curveVertex(150, 153.1875);
+curveVertex(148, 145.1875);
+curveVertex(142, 147.1875);
+curveVertex(135, 153.1875);
+curveVertex(130, 159.1875);
+curveVertex(128, 167.1875);
+curveVertex(128, 174.1875);
+curveVertex(128, 181.1875);
+curveVertex(126, 194.1875);
+curveVertex(128, 204.1875);
+curveVertex(127, 211.1875);
+curveVertex(128, 216.1875);
+curveVertex(128, 236.1875);
+curveVertex(128, 243.1875);
+curveVertex(127, 257.1875);
+curveVertex(128, 264.1875);
+curveVertex(128, 282.1875);
+curveVertex(128, 300.1875);
+curveVertex(124, 307.1875);
+curveVertex(122, 312.1875);
+curveVertex(117, 315.1875);
+curveVertex(110, 317.1875);
+curveVertex(102, 318.1875);
+curveVertex(92, 313.1875);
+curveVertex(85, 305.1875);
+curveVertex(84, 296.1875);
+endShape(CLOSE);
 }
 
 function handleFileUpload(event) {
