--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1460,6 +1460,90 @@ curveVertex(92, 313.1875);
 curveVertex(85, 305.1875);
 curveVertex(84, 296.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(193, 238.1875);
+curveVertex(204, 235.1875);
+curveVertex(210, 227.1875);
+curveVertex(209, 211.1875);
+curveVertex(208, 188.1875);
+curveVertex(206, 170.1875);
+curveVertex(206, 162.1875);
+curveVertex(206, 162.1875);
+curveVertex(216, 159.1875);
+curveVertex(229, 156.1875);
+curveVertex(244, 152.1875);
+curveVertex(258, 149.1875);
+curveVertex(258, 159.1875);
+curveVertex(259, 171.1875);
+curveVertex(260, 185.1875);
+curveVertex(261, 200.1875);
+curveVertex(254, 198.1875);
+curveVertex(242, 200.1875);
+curveVertex(236, 204.1875);
+curveVertex(233, 210.1875);
+curveVertex(235, 217.1875);
+curveVertex(246, 224.1875);
+curveVertex(261, 221.1875);
+curveVertex(268, 211.1875);
+curveVertex(267, 193.1875);
+curveVertex(265, 163.1875);
+curveVertex(263, 134.1875);
+curveVertex(260, 130.1875);
+curveVertex(253, 130.1875);
+curveVertex(229, 136.1875);
+curveVertex(206, 141.1875);
+curveVertex(199, 144.1875);
+curveVertex(199, 158.1875);
+curveVertex(201, 176.1875);
+curveVertex(202, 191.1875);
+curveVertex(204, 214.1875);
+curveVertex(193, 212.1875);
+curveVertex(183, 215.1875);
+curveVertex(175, 225.1875);
+curveVertex(180, 236.1875);
+endShape(CLOSE);
+    beginShape();
+curveVertex(300, 189.1875);
+curveVertex(303, 192.1875);
+curveVertex(304, 196.1875);
+curveVertex(314, 204.1875);
+curveVertex(321, 211.1875);
+curveVertex(327, 217.1875);
+curveVertex(329, 230.1875);
+curveVertex(327, 238.1875);
+curveVertex(325, 239.1875);
+curveVertex(325, 230.1875);
+curveVertex(321, 221.1875);
+curveVertex(314, 214.1875);
+curveVertex(304, 210.1875);
+curveVertex(304, 216.1875);
+curveVertex(307, 222.1875);
+curveVertex(316, 230.1875);
+curveVertex(323, 237.1875);
+curveVertex(327, 248.1875);
+curveVertex(328, 259.1875);
+curveVertex(323, 267.1875);
+curveVertex(324, 255.1875);
+curveVertex(322, 247.1875);
+curveVertex(316, 239.1875);
+curveVertex(304, 235.1875);
+curveVertex(303, 243.1875);
+curveVertex(304, 263.1875);
+curveVertex(303, 279.1875);
+curveVertex(300, 290.1875);
+curveVertex(287, 295.1875);
+curveVertex(277, 292.1875);
+curveVertex(268, 281.1875);
+curveVertex(274, 272.1875);
+curveVertex(282, 270.1875);
+curveVertex(291, 270.1875);
+curveVertex(296, 271.1875);
+curveVertex(298, 263.1875);
+curveVertex(298, 242.1875);
+curveVertex(297, 224.1875);
+curveVertex(298, 203.1875);
+curveVertex(297, 194.1875);
+endShape(CLOSE);
 }
 
 function handleFileUpload(event) {
