--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1544,6 +1544,33 @@ curveVertex(297, 224.1875);
 curveVertex(298, 203.1875);
 curveVertex(297, 194.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(371, 181.1875);
+curveVertex(371, 158.1875);
+curveVertex(371, 121.1875);
+curveVertex(371, 102.1875);
+curveVertex(374, 99.1875);
+curveVertex(378, 104.1875);
+curveVertex(382, 110.1875);
+curveVertex(391, 116.1875);
+curveVertex(400, 125.1875);
+curveVertex(402, 136.1875);
+curveVertex(401, 147.1875);
+curveVertex(397, 151.1875);
+curveVertex(398, 137.1875);
+curveVertex(393, 127.1875);
+curveVertex(383, 121.1875);
+curveVertex(378, 120.1875);
+curveVertex(377, 137.1875);
+curveVertex(377, 156.1875);
+curveVertex(377, 186.1875);
+curveVertex(377, 195.1875);
+curveVertex(365, 204.1875);
+curveVertex(349, 201.1875);
+curveVertex(343, 191.1875);
+curveVertex(351, 181.1875);
+curveVertex(361, 179.1875);
+endShape(CLOSE);
 }
 
 function handleFileUpload(event) {
