--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1571,6 +1571,37 @@ curveVertex(343, 191.1875);
 curveVertex(351, 181.1875);
 curveVertex(361, 179.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(396, 283.1875);
+curveVertex(400, 261.1875);
+curveVertex(407, 220.1875);
+curveVertex(428, 219.1875);
+curveVertex(461, 220.1875);
+curveVertex(457, 241.1875);
+curveVertex(452, 270.1875);
+curveVertex(443, 265.1875);
+curveVertex(435, 265.1875);
+curveVertex(429, 268.1875);
+curveVertex(423, 273.1875);
+curveVertex(424, 283.1875);
+curveVertex(434, 291.1875);
+curveVertex(451, 290.1875);
+curveVertex(456, 283.1875);
+curveVertex(463, 244.1875);
+curveVertex(469, 207.1875);
+curveVertex(469, 203.1875);
+curveVertex(461, 201.1875);
+curveVertex(441, 201.1875);
+curveVertex(406, 201.1875);
+curveVertex(400, 223.1875);
+curveVertex(392, 270.1875);
+curveVertex(377, 265.1875);
+curveVertex(364, 271.1875);
+curveVertex(364, 283.1875);
+curveVertex(374, 290.1875);
+curveVertex(385, 292.1875);
+curveVertex(393, 289.1875);
+endShape(CLOSE);
 }
 
 function handleFileUpload(event) {
