--- a/moonmusic/index.html
+++ b/moonmusic/index.html
@@ -1602,6 +1602,46 @@ curveVertex(374, 290.1875);
 curveVertex(385, 292.1875);
 curveVertex(393, 289.1875);
 endShape(CLOSE);
+    beginShape();
+curveVertex(536, 161.1875);
+curveVertex(535, 150.1875);
+curveVertex(541, 152.1875);
+curveVertex(550, 162.1875);
+curveVertex(553, 171.1875);
+curveVertex(552, 180.1875);
+curveVertex(551, 185.1875);
+curveVertex(557, 174.1875);
+curveVertex(557, 160.1875);
+curveVertex(551, 147.1875);
+curveVertex(542, 138.1875);
+curveVertex(539, 130.1875);
+curveVertex(533, 129.1875);
+curveVertex(531, 140.1875);
+curveVertex(528, 156.1875);
+curveVertex(527, 164.1875);
+curveVertex(523, 184.1875);
+curveVertex(519, 208.1875);
+curveVertex(511, 204.1875);
+curveVertex(500, 203.1875);
+curveVertex(493, 208.1875);
+curveVertex(489, 214.1875);
+curveVertex(491, 223.1875);
+curveVertex(502, 230.1875);
+curveVertex(517, 227.1875);
+curveVertex(523, 220.1875);
+curveVertex(525, 208.1875);
+curveVertex(527, 194.1875);
+curveVertex(530, 180.1875);
+curveVertex(531, 173.1875);
+curveVertex(537, 176.1875);
+curveVertex(548, 187.1875);
+curveVertex(548, 194.1875);
+curveVertex(545, 207.1875);
+curveVertex(553, 199.1875);
+curveVertex(553, 187.1875);
+curveVertex(549, 176.1875);
+curveVertex(542, 169.1875);
+endShape(CLOSE);
 }
 
 function handleFileUpload(event) {
