--- a/video/index.html
+++ b/video/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Claudia video about coldplay</title>
+  <title>Anna video about coldplay</title>
 </head>
 <body>
   <h1>My video</h1>
-    <!-- video claudia 1 -->
+    <!-- video Anna 1 -->
     <div class="video-item">
-      <video controls poster="" data-src="videoclaudia.mp4"> <!--la paraula video introdueix un video; la paraula controls introdueix el play, el stop;
+      <video controls poster="" data-src="videoanna.mp4"> <!--la paraula video introdueix un video; la paraula controls introdueix el play, el stop;
 la paraula poster introdueix una imatge que sortiria engantxada a sota del video al principi, per exemple poster="imatge.png" seria una imatge nova que
 sortiria al principi del video (només he de pujar aquesta imatge). Per ultim data-src significa la font (source=data-src) que conté el nom del video.
 Dintre de l'etiqueta <video> puc posar el mateix que a l'etiqueta <img>, es a dir, width que significa amplada en pixels i height que significa altura en pixels.
