--- a/pivot/index.html
+++ b/pivot/index.html
@@ -85,14 +85,12 @@
 
 <!-- Contingut principal -->
 <div class="content-container">
-    <h1>Benvinguts</h1>
-    <p>Em dic Anna i sóc alumne del curs 4tB de <a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">l'institut Pompeu Fabra</a></p>
-    <p>A continuació veuràs un llistat amb diferents projectes que farem durant el curs:</p>
-    <ul>
-        <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a la meva veu a través d'un micròfon i a diferents tecles del teclat, al ratolí, que faci moviments repetitius amb sin i cos, moviments aleatoris amb random... Utilitzarem p5.js.</li>
-        <li>Aliments ecològics i convencionals amb C++.</li>
-        <li>Contaminació atmosfèrica d'una ciutat catalana amb R.</li> 
-    </ul>
+    <h1>Pasos per fer una figura animada</h1>
+    <ol>
+        <li>Descarregar Gimp per exemple desde el Company Portal i instalar el pivot animator.</li>
+        <li>L'objectiu de Gimp es retallar les parts del cantant (cap, braços, cames...) per despés poder animarlos amb el Gimp.</li> 
+        <li>Busquem una image del nostre cantant preferit </li>
+    </ol>
 </div>
 
 <!-- Scripts necessaris -->
