--- a/pivot/index.html
+++ b/pivot/index.html
@@ -89,7 +89,9 @@
     <ol>
         <li>Descarregar Gimp per exemple desde el Company Portal i instalar el pivot animator.</li>
         <li>L'objectiu de Gimp es retallar les parts del cantant (cap, braços, cames...) per despés poder animarlos amb el Gimp.</li> 
-        <li>Busquem una image del nostre cantant preferit </li>
+        <li>Busquem una image del nostre cantant preferit i li retallem les parts del cos</li>
+        <li>Obrim l'imatge amb fitxer>Obre</li>
+        <li>Cliquem al menú capes>afefeix canal alfa (transparència)</li>
     </ol>
 </div>
 
