--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="nav-link" href="#">Inici</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tema 1</a>
+                    <a class="nav-link" href="https://annaadpp.gitgub.io/pivot">Pivot</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
@@ -89,8 +89,9 @@
     <p>Em dic Anna i sóc alumne del curs 4tB de <a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">l'institut Pompeu Fabra</a></p>
     <p>A continuació veuràs un llistat amb diferents projectes que farem durant el curs:</p>
     <ul>
-        <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a la meva veu a través d'un micròfon i a diferents tecles del teclat, al ratolí, que faci moviments repetitius amb sin i cos, moviments aleatoris amb random... Utilitzarem p5.js.</li>
-        <li>Aliments ecològics i convencionals amb C++.</li>
+        <li>Creació d'una figura relacionada amb el grup de musica Coldplay que canvia de forma</li>
+        <li>Aliments ecològics i convencionals amb bibliografia científica: en el mau cas he comparat els nutrients (vitamines, polifenols,minerals) de les algerginies ecològiques a conventionals.</li>
+       <li>Animació amb pivot animator d'un cantant que cantarà amb Coldplay, crearem una figura articulada STK, nosaltres mateixos.</li>
         <li>Contaminació atmosfèrica d'una ciutat catalana amb R.</li> 
     </ul>
 </div>
