--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="nav-link" href="#">Inici</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://annaadpp.gitgub.io/pivot">Pivot</a>
+                    <a class="nav-link" href="https://annaadpp.github.io/pivot">Pivot</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
