--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@
         <li>Creació d'una figura relacionada amb el grup de musica Coldplay que canvia de forma</li>
         <li>Aliments ecològics i convencionals amb bibliografia científica: en el mau cas he comparat els nutrients (vitamines, polifenols,minerals) de les algerginies ecològiques a conventionals.</li>
        <li>Animació amb pivot animator d'un cantant que cantarà amb Coldplay, crearem una figura articulada STK, nosaltres mateixos.</li>
-        <li>Contaminació atmosfèrica d'una ciutat catalana amb R.</li> 
+        <li>Contaminació atmosfèrica d'una ciutat catalana amb R.</li>
+        <li>Apendre conceptes de programació per la cara. Que vol dir això? Utilitzarem diferents cares per apendre que el sinus i el cosinus ens serveixen per fer canvisde forma, de color o de posició i són canvis repetitius. 
+        També podem utilitzar el soroll Perlin (noise) que genera números pseudoaleatoris no molt diferents entre si. El soroll Perlin genera canvis de color o moviments més suaus que els números aleatoris (random). 
+        També utilitzarem el volum per fer canvis. El ratolí provocarà canvis en la cara o la pressió d'una tecla del teclat deteminada. Podríem activar la càmera del portàtil i reconeixer setanta punts de la cara amb 
+        clmtrackr.js i reconèixer sentiments per les posicions de la boca i els ulls.</li>
+        <li>Triarem una d'obra d'art geomètrica i la farem interactiva amb totes les tècniques anteriors on hem après aprogramar per la cara.</li>
     </ul>
+
 </div>
 
 <!-- Scripts necessaris -->
