--- a/cara1/index.html
+++ b/cara1/index.html
@@ -1,6 +1,13 @@
 <html>
   <head>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/p5.min.js" 
+  integrity="sha512-I0Pwwz3PPNQkWes+rcSoQqikKFfRmTfGQrcNzZbm8ALaUyJuFdyRinl805shE8xT6iEWsWgvRxdXb3yhQNXKoA==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/addons/p5.sound.min.js" 
+      integrity="sha512-WzkwpdWEMAY/W8WvP9KS2/VI6zkgejR4/KTxTl4qHx0utqeyVE0JY+S1DlMuxDChC7x0oXtk/ESji6a0lP/Tdg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--Les línies de més amunt connecten el nostre codi amb p5.js de forma que entendra aquest llenguatg, per exemple egllipse
+    ens dibuixarà un el·lipse, arc ens dibuixarà un arc, fill ens omplirà de color, mouseX ens permetrà moure amb el ratolí... Integrity és un número que està en base 64 (lletres minúscules, lletres majúscules i númros) que permet comprovar que p5.js es carrega bé. -->
   </head>
   <body>
     
