--- a/mataro/index.html
+++ b/mataro/index.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <img src="Rplot01.png">
+    <p>En aquesta imatge podem veure la contaminació del 2024
+    a Mataro. Observem</p>
+  </body>
+</html>
