--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                          <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/coldplay">Coldplay</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/moonmusic">Moon music</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/martorell">Dades 2020 Martorell</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/mataro">Dades 2024  Matarò</a>
                     </div>
                 </li>
                <li class="nav-item dropdown">
