--- a/mataro/index.html
+++ b/mataro/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <img src="Rplot01.png">
-    <p>En aquesta imatge podem veure la contaminació del 2024
-    a Mataro. Observem</p>
+    <p>El gràfic mostra l’evolució de la contaminació atmosfèrica a Mataró durant el 2024, amb variacions diàries, setmanals i mensuals dels principals contaminants (NO₂, CO, NO, PM₁₀, O₃ i SO₂). S’observa un augment de NO₂ i CO durant les hores punta dels dies laborables, mentre que l’ozó (O₃) arriba al seu màxim al migdia, especialment a l’estiu. 
+Pel que fa al cap de setmana, els nivells de NO₂ i CO disminueixen lleugerament, indicant una possible reducció del trànsit, mentre que l’ozó es manté elevat. Aquest patró suggereix una dinàmica influenciada tant per l’activitat humana com per factors atmosfèrics.</p>
   </body>
 </html>
