--- a/martorell/index.html
+++ b/martorell/index.html
@@ -4,7 +4,6 @@
   </head>
   <body>
     <img src="Rplot.png">
-    <p>En aquesta imatge podem veure la contaminació del 2020
-    a Martorell. Observem</p>
+    <p>El gràfic reflecteix la contaminació atmosfèrica a Martorell durant el 2020, destacant els patrons diaris, setmanals i mensuals. Els contaminants NOₓ, NO₂ i NO mostren pics clars a les hores punta dels dies laborables, relacionats amb el trànsit. A nivell mensual, aquests contaminants són més baixos a l'estiu i augmenten a l'hivern. Pel que fa a la setmana, els nivells són més alts de dilluns a divendres, amb una reducció significativa durant el cap de setmana, especialment el diumenge. En canvi, el PM₁₀ i el H₂S tenen una variació més estable, indicant una possible influència d’altres fonts d’emissió.</p>
   </body>
 </html>
