--- a/cara1/index.html
+++ b/cara1/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script>
-funcion setup () {
+function setup () {
 createCanvas (500, 500);//mesura de la zona de dibuix
 }
 function draw () {
