--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -151,13 +151,35 @@
 
       switch (dominant) {
         case 'happy':
-          stroke(255,200,0); // groc
-          beginShape();
-          for (let a = 0; a < TWO_PI; a += PI/8) {
-            let r = 100 + 25 * sin(a * 8);
-            let x = VIRTUAL_W/2 + r * cos(a);
-            let y = VIRTUAL_H/2 + r * sin(a);
-            vertex(x, y); // vèrtex positiu
+         beginShape();
+vertex(286, 327.1875);
+vertex(295, 323.1875);
+vertex(304, 319.1875);
+vertex(311, 317.1875);
+vertex(327, 311.1875);
+vertex(344, 306.1875);
+vertex(358, 300.1875);
+vertex(377, 293.1875);
+vertex(387, 291.1875);
+vertex(408, 298.1875);
+vertex(431, 305.1875);
+vertex(451, 311.1875);
+vertex(470, 318.1875);
+vertex(475, 320.1875);
+vertex(469, 340.1875);
+vertex(455, 382.1875);
+vertex(445, 412.1875);
+vertex(435, 445.1875);
+vertex(426, 470.1875);
+vertex(416, 499.1875);
+vertex(408, 524.1875);
+vertex(377, 525.1875);
+vertex(339, 525.1875);
+vertex(331, 496.1875);
+vertex(313, 433.1875);
+vertex(291, 348.1875);
+vertex(286, 326.1875);
+endShape();
           }
           endShape(CLOSE);
           break;
