--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -151,6 +151,7 @@
 
       switch (dominant) {
         case 'happy':
+          stroke(250,145,130)
          beginShape();
 vertex(286, 327.1875);
 vertex(295, 323.1875);
