--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -152,37 +152,25 @@
       switch (dominant) {
         case 'happy':
           stroke(250,145,130)
-         beginShape();
-vertex(286, 327.1875);
-vertex(295, 323.1875);
-vertex(304, 319.1875);
-vertex(311, 317.1875);
-vertex(327, 311.1875);
-vertex(344, 306.1875);
-vertex(358, 300.1875);
-vertex(377, 293.1875);
+        beginShape();//cap
 vertex(387, 291.1875);
-vertex(408, 298.1875);
-vertex(431, 305.1875);
-vertex(451, 311.1875);
-vertex(470, 318.1875);
-vertex(475, 320.1875);
-vertex(469, 340.1875);
-vertex(455, 382.1875);
-vertex(445, 412.1875);
-vertex(435, 445.1875);
-vertex(426, 470.1875);
-vertex(416, 499.1875);
-vertex(408, 524.1875);
-vertex(377, 525.1875);
-vertex(339, 525.1875);
-vertex(331, 496.1875);
-vertex(313, 433.1875);
-vertex(291, 348.1875);
-vertex(286, 326.1875);
-          endShape(CLOSE);
-          break;
-
+vertex(409, 298.1875);
+vertex(438, 308.1875);
+vertex(463, 315.1875);
+vertex(476, 320.1875);
+vertex(468, 342.1875);
+vertex(463, 359.1875);
+vertex(434, 445.1875);
+vertex(419, 489.1875);
+vertex(407, 525.1875);
+vertex(338, 527.1875);
+vertex(317, 448.1875);
+vertex(317, 448.1875);
+vertex(299, 379.1875);
+vertex(285, 327.1875);
+vertex(385, 291.1875);
+endShape(CLOSE);
+          
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
