--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -170,7 +170,24 @@ vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
 endShape(CLOSE);
-          
+          beginShape();//boca
+vertex(345, 434.1875);
+vertex(353, 439.1875);
+vertex(363, 441.1875);
+vertex(370, 441.1875);
+vertex(379, 441.1875);
+vertex(387, 439.1875);
+vertex(399, 430.1875);
+vertex(398, 442.1875);
+vertex(393, 458.1875);
+vertex(386, 470.1875);
+vertex(373, 479.1875);
+vertex(356, 474.1875);
+vertex(344, 455.1875);
+vertex(338, 433.1875);
+vertex(339, 427.1875);
+vertex(342, 431.1875);
+endShape(CLOSE);
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
