--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -188,6 +188,22 @@ vertex(338, 433.1875);
 vertex(339, 427.1875);
 vertex(342, 431.1875);
 endShape(CLOSE);
+          beginShape();//pelo derecho
+vertex(465, 355.1875);
+vertex(472, 366.1875);
+vertex(487, 386.1875);
+vertex(495, 397.1875);
+vertex(477, 423.1875);
+vertex(437, 485.1875);
+vertex(442, 512.1875);
+vertex(452, 557.1875);
+vertex(454, 571.1875);
+vertex(448, 575.1875);
+vertex(439, 564.1875);
+vertex(424, 537.1875);
+vertex(412, 515.1875);
+vertex(463, 355.1875);
+endShape(CLOSE);
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
