--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -204,6 +204,64 @@ vertex(424, 537.1875);
 vertex(412, 515.1875);
 vertex(463, 355.1875);
 endShape(CLOSE);
+          beginShape();//pelo izquierdo
+vertex(291, 352.1875);
+vertex(314, 435.1875);
+vertex(333, 507.1875);
+vertex(290, 575.1875);
+vertex(284, 575.1875);
+vertex(287, 496.1875);
+vertex(287, 496.1875);
+vertex(239, 406.1875);
+vertex(288, 353.1875);
+vertex(292, 350.1875);
+endShape(CLOSE);
+          beginShape();//barba
+vertex(339, 528.1875);
+vertex(401, 527.1875);
+vertex(366, 626.1875);
+vertex(340, 530.1875);
+endShape(CLOSE);
+          beginShape();//cos
+vertex(289, 497.1875);
+vertex(241, 495.1875);
+vertex(241, 495.1875);
+vertex(159, 595.1875);
+vertex(118, 672.1875);
+vertex(144, 725.1875);
+vertex(177, 760.1875);
+vertex(219, 799.1875);
+vertex(234, 809.1875);
+vertex(243, 818.1875);
+vertex(250, 786.1875);
+vertex(255, 750.1875);
+vertex(230, 730.1875);
+vertex(230, 730.1875);
+vertex(196, 696.1875);
+vertex(187, 669.1875);
+vertex(229, 611.1875);
+vertex(246, 593.1875);
+vertex(241, 736.1875);
+vertex(254, 750.1875);
+vertex(251, 786.1875);
+vertex(242, 821.1875);
+vertex(234, 810.1875);
+vertex(216, 920.1875);
+vertex(422, 915.1875);
+vertex(490, 795.1875);
+vertex(505, 598.1875);
+vertex(453, 547.1875);
+vertex(454, 569.1875);
+vertex(449, 575.1875);
+vertex(411, 514.1875);
+vertex(407, 523.1875);
+vertex(403, 527.1875);
+vertex(366, 626.1875);
+vertex(339, 527.1875);
+vertex(332, 509.1875);
+vertex(287, 576.1875);
+vertex(289, 497.1875);
+endShape(CLOSE);
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
