--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -262,6 +262,92 @@ vertex(332, 509.1875);
 vertex(287, 576.1875);
 vertex(289, 497.1875);
 endShape(CLOSE);
+          beginShape();//fondo
+vertex(690, 741.1875);
+vertex(445, 529.1875);
+vertex(449, 547.1875);
+vertex(505, 599.1875);
+vertex(491, 793.1875);
+vertex(421, 918.1875);
+vertex(691, 920.1875);
+vertex(691, 920.1875);
+vertex(690, 744.1875);
+vertex(691, 682.1875);
+vertex(443, 483.1875);
+vertex(447, 530.1875);
+vertex(449, 546.1875);
+vertex(505, 597.1875);
+vertex(490, 794.1875);
+vertex(473, 827.1875);
+vertex(547, 918.1875);
+vertex(690, 921.1875);
+vertex(690, 682.1875);
+vertex(690, 682.1875);
+vertex(691, 2.1875);
+vertex(0, 0.1875);
+vertex(0, 142.1875);
+vertex(207, 71.1875);
+vertex(431, 142.1875);
+vertex(689, 56.1875);
+vertex(688, 146.1875);
+vertex(1, 144.1875);
+vertex(31, 171.1875);
+vertex(31, 161.1875);
+vertex(61, 160.1875);
+vertex(62, 177.1875);
+vertex(77, 198.1875);
+vertex(97, 211.1875);
+vertex(117, 214.1875);
+vertex(136, 214.1875);
+vertex(154, 216.1875);
+vertex(149, 245.1875);
+vertex(179, 268.1875);
+vertex(501, 149.1875);
+vertex(178, 265.1875);
+vertex(287, 354.1875);
+vertex(263, 378.1875);
+vertex(142, 281.1875);
+vertex(149, 248.1875);
+vertex(116, 444.1875);
+vertex(91, 218.1875);
+vertex(75, 211.1875);
+vertex(56, 383.1875);
+vertex(22, 205.1875);
+vertex(74, 203.1875);
+vertex(48, 188.1875);
+vertex(33, 188.1875);
+vertex(33, 179.1875);
+vertex(2, 143.1875);
+vertex(1, 247.1875);
+vertex(36, 288.1875);
+vertex(52, 381.1875);
+vertex(67, 330.1875);
+vertex(105, 377.1875);
+vertex(117, 445.1875);
+vertex(111, 442.1875);
+vertex(124, 400.1875);
+vertex(140, 280.1875);
+vertex(157, 215.1875);
+vertex(135, 199.1875);
+vertex(137, 175.1875);
+vertex(107, 175.1875);
+vertex(107, 198.1875);
+vertex(133, 198.1875);
+vertex(152, 213.1875);
+vertex(123, 400.1875);
+vertex(233, 529.1875);
+vertex(242, 495.1875);
+vertex(281, 496.1875);
+vertex(237, 405.1875);
+vertex(260, 378.1875);
+vertex(291, 354.1875);
+vertex(287, 327.1875);
+vertex(385, 290.1875);
+vertex(476, 321.1875);
+vertex(464, 355.1875);
+vertex(494, 397.1875);
+vertex(443, 481.1875);
+endShape(CLOSE);
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
