--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -348,6 +348,28 @@ vertex(464, 355.1875);
 vertex(494, 397.1875);
 vertex(443, 481.1875);
 endShape(CLOSE);
+          beginShape();//jiji
+vertex(454, 278.1875);
+vertex(447, 219.1875);
+vertex(492, 217.1875);
+vertex(456, 275.1875);
+vertex(489, 290.1875);
+vertex(505, 300.1875);
+vertex(520, 256.1875);
+vertex(542, 278.1875);
+vertex(508, 298.1875);
+vertex(515, 321.1875);
+vertex(515, 321.1875);
+vertex(552, 309.1875);
+vertex(552, 333.1875);
+vertex(519, 324.1875);
+vertex(514, 341.1875);
+vertex(504, 359.1875);
+vertex(504, 359.1875);
+vertex(549, 353.1875);
+vertex(530, 394.1875);
+vertex(505, 359.1875);
+endShape(CLOSE);
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
