--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -347,7 +347,7 @@ vertex(476, 321.1875);
 vertex(464, 355.1875);
 vertex(494, 397.1875);
 vertex(443, 481.1875);
-endShape(CLOSE);
+endShape();
           beginShape();//jiji
 vertex(454, 278.1875);
 vertex(447, 219.1875);
@@ -369,7 +369,7 @@ vertex(504, 359.1875);
 vertex(549, 353.1875);
 vertex(530, 394.1875);
 vertex(505, 359.1875);
-endShape(CLOSE);
+endShape();
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
