--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -152,6 +152,7 @@
       switch (dominant) {
         case 'happy':
           stroke(0,0,0)
+          fill(235,223,164);
         beginShape();//cap
 vertex(387, 291.1875);
 vertex(409, 298.1875);
@@ -170,6 +171,7 @@ vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
 endShape(CLOSE);
+          fill(0,0,0);
           beginShape();//boca
 vertex(345, 434.1875);
 vertex(353, 439.1875);
@@ -188,6 +190,7 @@ vertex(338, 433.1875);
 vertex(339, 427.1875);
 vertex(342, 431.1875);
 endShape(CLOSE);
+          fill(102,51,0);
           beginShape();//pelo derecho
 vertex(465, 355.1875);
 vertex(472, 366.1875);
