--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -225,6 +225,7 @@ vertex(401, 527.1875);
 vertex(366, 626.1875);
 vertex(340, 530.1875);
 endShape(CLOSE);
+          fill(0,0,0);
           beginShape();//cos
 vertex(289, 497.1875);
 vertex(241, 495.1875);
@@ -265,6 +266,7 @@ vertex(332, 509.1875);
 vertex(287, 576.1875);
 vertex(289, 497.1875);
 endShape(CLOSE);
+          nofill
           beginShape();//fondo
 vertex(690, 741.1875);
 vertex(445, 529.1875);
