--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -267,6 +267,7 @@ vertex(287, 576.1875);
 vertex(289, 497.1875);
 endShape(CLOSE);
           nofill
+          stroke(0,0,0)
           beginShape();//fondo
 vertex(690, 741.1875);
 vertex(445, 529.1875);
