--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -89,6 +89,7 @@
 
     // Redimensiona el canvas si canvia la mida de la finestra
     function windowResized() {
+      background(0,0,0);
       resizeCanvas(windowWidth, windowHeight);
     }
 
