--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -375,6 +375,7 @@ vertex(549, 353.1875);
 vertex(530, 394.1875);
 vertex(505, 359.1875);
 endShape();
+          break;
         case 'sad':
           stroke(50,100,200,150); // blau
           beginShape();
