--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -353,6 +353,7 @@ vertex(464, 355.1875);
 vertex(494, 397.1875);
 vertex(443, 481.1875);
 endShape();
+          fill(255,255,0);
           beginShape();//jiji
 vertex(454, 278.1875);
 vertex(447, 219.1875);
