--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -563,29 +563,20 @@ vertex(464, 355.1875);
 vertex(494, 397.1875);
 vertex(443, 481.1875);
 endShape();
-          fill(255,255,0);
-          beginShape();//jiji
-vertex(454, 278.1875);
-vertex(447, 219.1875);
-vertex(492, 217.1875);
-vertex(456, 275.1875);
-vertex(489, 290.1875);
-vertex(505, 300.1875);
-vertex(520, 256.1875);
-vertex(542, 278.1875);
-vertex(508, 298.1875);
-vertex(515, 321.1875);
-vertex(515, 321.1875);
-vertex(552, 309.1875);
-vertex(552, 333.1875);
-vertex(519, 324.1875);
-vertex(514, 341.1875);
-vertex(504, 359.1875);
-vertex(504, 359.1875);
-vertex(549, 353.1875);
-vertex(530, 394.1875);
-vertex(505, 359.1875);
-endShape();;
+          fill(87, 166, 255 );
+          beginShape();
+vertex(416, 391.1875);
+vertex(407, 401.1875);
+vertex(404, 409.1875);
+vertex(405, 419.1875);
+vertex(413, 422.1875);
+vertex(424, 423.1875);
+vertex(430, 415.1875);
+vertex(430, 405.1875);
+vertex(427, 398.1875);
+vertex(422, 393.1875);
+vertex(419, 387.1875);
+endShape(CLOSE);
           break;
 
         case 'angry':
