--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -398,6 +398,21 @@ vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
 endShape(CLOSE);
+          fill(255,255,255);
+          beginShape();
+vertex(416, 352.1875);
+vertex(405, 356.1875);
+vertex(401, 364.1875);
+vertex(401, 375.1875);
+vertex(404, 387.1875);
+vertex(411, 392.1875);
+vertex(424, 393.1875);
+vertex(429, 386.1875);
+vertex(432, 376.1875);
+vertex(432, 364.1875);
+vertex(426, 353.1875);
+vertex(419, 353.1875);
+endShape(CLOSE);
           fill(0,0,0);
           beginShape();//boca
 vertex(340, 476.1875);
