--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -376,6 +376,20 @@ vertex(549, 353.1875);
 vertex(530, 394.1875);
 vertex(505, 359.1875);
 endShape();
+          fill(0,0,0);
+           beginShape();
+vertex(416, 391.1875);
+vertex(407, 401.1875);
+vertex(404, 409.1875);
+vertex(405, 419.1875);
+vertex(413, 422.1875);
+vertex(424, 423.1875);
+vertex(430, 415.1875);
+vertex(430, 405.1875);
+vertex(427, 398.1875);
+vertex(422, 393.1875);
+vertex(419, 387.1875);
+endShape(CLOSE);
           break;
         case 'sad':
          stroke(0,0,0)
@@ -578,20 +592,7 @@ vertex(464, 355.1875);
 vertex(494, 397.1875);
 vertex(443, 481.1875);
 endShape();
-          fill(87, 166, 255 );
-          beginShape();
-vertex(416, 391.1875);
-vertex(407, 401.1875);
-vertex(404, 409.1875);
-vertex(405, 419.1875);
-vertex(413, 422.1875);
-vertex(424, 423.1875);
-vertex(430, 415.1875);
-vertex(430, 405.1875);
-vertex(427, 398.1875);
-vertex(422, 393.1875);
-vertex(419, 387.1875);
-endShape(CLOSE);
+         
           break;
 
         case 'angry':
